# monsgeek-akko-linux

.github/workflows/: release-unbrick.yml
data/: device_matrices.json  devices.json
docs/: CLI.md  FIRMWARE_PATCH.md  HARDWARE.md  PROTOCOL.md
docs/bugs/: consumer_report_dongle_misroute.txt  depth_report_speed_gate_bug.txt  get_macro_stride_bug.txt  oob_hazards.txt
driver_extract/: merge-matrices.js
firmwares/2949-v407/ghidra_v407.rep/: projectState
firmwares/2949-v407/ghidra_v407.rep/idata/: ~index.bak
firmwares/2949-v407/ghidra_v407.rep/idata/00/: 00000005.prp
firmwares/2949-v407/patch/: handlers.c  hooks.py
firmwares/DONGLE_RY6108_RF_KB_V903/patch/: hooks.py
iot_driver_linux/: Cargo.toml
iot_driver_linux/monsgeek-keyboard/src/: lib.rs
iot_driver_linux/monsgeek-transport/src/: command.rs  discovery.rs  flow_control.rs  hid_dongle.rs  lib.rs  protocol.rs  types.rs
iot_driver_linux/src/: cli.rs  device_loader.rs  devices.rs  grpc.rs  lib.rs  main.rs  profile_led.rs  protocol.rs  tui.rs
iot_driver_linux/src/commands/: debug.rs  dongle.rs  effect.rs  firmware.rs  led_stream.rs  mod.rs  notify.rs  query.rs  reactive.rs  set.rs  triggers.rs  userpic.rs  utility.rs
iot_driver_linux/src/effect/: mod.rs  preview.rs
iot_driver_linux/src/hal/: constants.rs  registry.rs
iot_driver_linux/src/notify/: daemon.rs  dbus.rs  keymap.rs  log.rs  mod.rs
iot_driver_linux/src/profile/: builtin.rs  registry.rs
iot_driver_linux/src/tui/: mod.rs  shared.rs
iot_driver_linux/src/tui/tabs/: depth.rs  device_info.rs  lighting.rs  mod.rs  notify.rs
monsgeek-unbrick/: Cargo.toml
monsgeek-unbrick/src/: dfuse.rs  driver.rs  flash_map.rs  main.rs  winusb.rs
patch/: hook_framework.py
