[package]
name = "monsgeek-unbrick"
version = "0.1.0"
edition = "2021"
description = "Standalone Windows DFU recovery tool for MonsGeek keyboards"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Devices_Usb",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
anyhow = "1"

[build-dependencies]
embed-manifest = "1"
